# gobo

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  flake.nix  here-s-a-description-of-dreamy-gizmo.md  pyproject.toml
deploy/: gobo.service  update.sh
deploy/pulumi/: Pulumi.yaml  __main__.py  cloud-init.yaml  pyproject.toml
dev/: manager_probe.py
src/gobo/: __main__.py  app.py  cli.py  config.py  db.py  llm.py  memory.py  models.py  scheduler.py
src/gobo/manager/: agent.py  bot.py  loop.py  prompts.py
src/gobo/planner/: agent.py  bot.py  compile.py  prompts.py
tests/: conftest.py  test_manager_loop.py  test_memory.py  test_planner.py  test_policy.py  test_scheduler.py
