[project]
name = "gobo"
version = "0.1.0"
description = "Two-agent attention management over Telegram: a Planner compiles a hidden enforcement policy, a Manager executes it."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "openai>=1.50",
    "aiosqlite>=0.20",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
]

# ruff comes from the nix dev shell (its PyPI wheel is dynamically linked and
# won't run on NixOS)
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
gobo = "gobo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gobo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
